[package]
name = "dakv_skiplist"
version = "0.1.0"
authors = ["da2018 <da2018t@gmail.com>"]
edition = "2018"
description = "skiplist for dakv"
license = "MIT"
homepage = "https://github.com/dakv/skiplist"
keywords = ["skiplist", "dakv"]
categories = ["skiplist", "dakv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
