[package]
name = "dakv_skiplist"
version = "0.1.3"
authors = ["dkkb <dabkb@aol.com>"]
edition = "2018"
description = "skiplist for dakv"
license = "MIT"
homepage = "https://github.com/dakv/skiplist"
keywords = ["skiplist", "dakv"]
categories = ["skiplist", "dakv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
